# agtech-dm

./: README.md  app.py  apps.py  auth.py  datos_agricolas.csv  main.py  mapa_ndvi.html  pyproject.toml  requirements.txt  umbrales_cultivo.json
auth/: credentials.json  test_ee.py
